# rust-hash

./: .gitignore  AI_PROMPT.md  CHANGELOG.md  Cargo.toml  README.md  build-icon.cmd  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  trigger-scoop-call.yml
scripts/: clean.cmd
src/: main.rs
